# ili9486-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
doc/: Initialization_Sequences.md
examples/: parallel-interface.rs
src/: graphics.rs  lib.rs
src/interface/: mod.rs  parallel.rs
