[package]
name = "ili9486"
version = "0.2.0"
authors = [
    "Andres O. Vela <andresovela@gmail.com>",
    "Andrew Doble <http://github.com/adoble>",
]
edition = "2021"

[dependencies]
embedded-hal = "0.2.4"
display-interface = "0.4.1"
display-interface-parallel-gpio = "0.6.0"
embedded-graphics = "0.7.1"
